style: local vars naming and other small cleanup things